--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key1'
+            keyPassword 'Sh00byd00m0p!'
+            storeFile file('C:/Users/Thomas/AndroidStudioProjects/Miner/key.jks')
+            storePassword 'Sh00byd00m0p!'
+        }
+    }
     compileSdkVersion 24
     buildToolsVersion "23.0.2"
     defaultConfig {
-        applicationId "com.example.thomas.miner"
+        applicationId "com.alienpg.release.aflatminer"
         minSdkVersion 14
         targetSdkVersion 24
         versionCode 1
@@ -15,6 +23,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+        }
+        debug {
+            signingConfig signingConfigs.config
         }
     }
 }
